etc.iptables.rules.v4
# Generated by iptables-save v1.8.4 on Mon Jan 31 20:09:27 2022
*security
:INPUT ACCEPT [3896:578071]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [3120:410396]
COMMIT
# Completed on Mon Jan 31 20:09:27 2022
# Generated by iptables-save v1.8.4 on Mon Jan 31 20:09:27 2022
*raw
:PREROUTING ACCEPT [6040:1096796]
:OUTPUT ACCEPT [4089:486888]
COMMIT
# Completed on Mon Jan 31 20:09:27 2022
# Generated by iptables-save v1.8.4 on Mon Jan 31 20:09:27 2022
*mangle
:PREROUTING ACCEPT [6040:1096796]
:INPUT ACCEPT [3896:578071]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [4089:486888]
:POSTROUTING ACCEPT [3120:410396]
COMMIT
# Completed on Mon Jan 31 20:09:27 2022
# Generated by iptables-save v1.8.4 on Mon Jan 31 20:09:27 2022
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT DROP [0:0]
# Stateless firewall rules
-A INPUT -i lo -j ACCEPT
-A INPUT -s 192.168.0.0/16 -i ens18 -j ACCEPT
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables IN denied: " --log-level 7
-A INPUT -s 123.123.123.123/32 -i ens18 -p udp -m udp --sport 1194 -j ACCEPT
-A INPUT -i tun0 -j ACCEPT
-A FORWARD -i wg0 -o tun0 -j ACCEPT
-A FORWARD -i tun0 -o wg0 -j ACCEPT
-A FORWARD -m limit --limit 5/min -j LOG --log-prefix "iptables FW denied: " --log-level 7
-A FORWARD -j DROP
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -d 192.168.0.0/16 -o ens18 -j ACCEPT
-A OUTPUT -d 123.123.123.123/32 -o ens18 -p udp -m udp --dport 1194 -j ACCEPT
-A OUTPUT -o tun0 -j ACCEPT
COMMIT
# Completed on Mon Jan 31 20:09:27 2022
# Generated by iptables-save v1.8.4 on Mon Jan 31 20:09:27 2022
*nat
:PREROUTING ACCEPT [2146:518821]
:INPUT ACCEPT [2:96]
:OUTPUT ACCEPT [1192:91511]
:POSTROUTING ACCEPT [162:12485]
-A POSTROUTING -o tun0 -j MASQUERADE
COMMIT
# Completed on Mon Jan 31 20:09:27 2022
